Follower-following app frontend react prototype completed

--- a/iframe_testing.html
+++ b/iframe_testing.html
@@ -1,8 +1,7 @@
-<p></p>
 <!-- <iframe src="http://localhost:8081/" style="border:none;" title="Iframe Example"></iframe> -->
 
 
-<p></p>
+<!-- <p></p>
 <div class="container">
     <iframe class="responsive-iframe" src="http://localhost:8081/"></iframe>
 </div>
@@ -15,6 +14,11 @@
 <p></p>
 <div class="container">
     <iframe class="responsive-iframe" src="http://localhost:8081/"></iframe>
+</div> -->
+
+
+<div class="container">
+    <iframe class="responsive-iframe" src="http://localhost:8084/"></iframe>
 </div>
 
 
@@ -31,11 +35,12 @@
 .responsive-iframe {
   border: none;
   position: absolute;
+  overflow-y: hidden;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  width: 100%;
+  width: 20%;
   height: 100%;
 }
 </style>
