follower - following app front end prototype designed as discussed.

--- a/iframe_testing.html
+++ b/iframe_testing.html
@@ -27,8 +27,10 @@
   position: relative;
   overflow: hidden;
   width: 100%;
+  height: 100%;
   /* padding-top: 75%; */ /* 4:3 Aspect Ratio */
-  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  padding-top: 56.25%; 
+  /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 
 /* Then style the iframe to fit in the container div with full height and width */
@@ -40,7 +42,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  width: 20%;
+  width: 200px;
   height: 100%;
 }
 </style>
